# Geom

./: .gitmodules  CMakeLists.txt  README.md
Practice2/Proj1/: CMakeLists.txt  test.cpp
Practice3/Proj/: CMakeLists.txt  main.cpp
Practice4/Proj/: CMakeLists.txt  main.cpp
